# doc-rag-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html
sample_docs/: returns_policy.md  shipping.md
src/doc_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragassistant/: __init__.py  api.py  chunking.py  config.py  embeddings.py  ingest.py  llm.py  rag.py  schema.py  store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_rag.py  test_store.py
