[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-rag-assistant"
version = "0.1.0"
description = "Retrieval-augmented Q&A over your own documents, grounded with citations and answered by Claude."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vamsi Krishna Unnam", email = "vamsik8629@gmail.com" }]
keywords = ["rag", "llm", "anthropic", "claude", "retrieval", "fastapi", "vector-search"]

dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[project.scripts]
rag-ingest = "ragassistant.ingest:main"

[project.urls]
Homepage = "https://github.com/vk86294140-cloud/doc-rag-assistant"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
